--- a/index.html
+++ b/index.html
@@ -1,15 +1,50 @@
 <!DOCTYPE html>
-<html>
+<html lang = "en">
+
     <head>
+        <meta charset="utf-8" />
         <link rel="stylesheet" href="./index.css"/>
         <script type="text/javascript" src="./index.js"></script>
+        <title>Deescalator</title>
     </head>
 <body>
-
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+    
+<h1>Deescalator</h1>
 
 <canvas id="myCanvas" width="200" height="200"></canvas>
+
+<p>Steps
+    <li> Breath in [4 seconds]</li>
+    <li> Hold [4 seconds]</li>
+    <li> Breath out [5 seconds]</li>
+    <li> Repeat</li>
+    <li> Breath in [8 seconds]</li>
+    <li> Hold [8 seconds]</li>
+    <li> Breath out [10 seconds]</li>
+    <li> Repeat</li>
+    <li> </li>
+    <li> Time to focus on your senses and whats around you</li>
+    <li> Say 5 things you can see right now</li>
+    <li> Say 4 things you can feel right now</li>
+    <li> Say 3 things you can hear right now</li>
+    <li> Say 2 things you can smell right now</li>
+    <li> Say 1 things you can taste right now</li>
+    <li> </li>
+    <li> Breath in, hold, and breath out for as long as you need to</li>
+    <li> Breath agian </li>
+    <li> How are you doing? Check in with yourself</li>
+    <li> You have done so many cool things before, name one thing that made you happy today
+        For example, I got to pat my dog this morning! There's gotta be one thing, no matter how small.
+    </li>
+    <li> Breath agian </li>
+    <li> </li>
+
+    Resources
+    <li>Nation suicide prevention hotline: [ (1)800-273-8255 ]</li>
+    <li>Crisis texting line: Text TALK to [741741] </li>
+    <li>Crisis call line with 24/7 live opperators: [775-784-8090]</li>
+
+</p>
 
 </body>
 </html>
